@@ -1,5 +1,10 @@
 2007-03-23  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/hotkey_manager.py: Added more keys to the key
+	combo entry.
+
+2007-03-23  Eitan Isaacson  <eitan@ascender.com>
+
 	* Makefile.am: Added gconf schema and schema installation
 	* accerciser.schemas: A new schema with default values for plugin layout.
 	* configure.in: Added gconf stuff
